<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/ma_flt_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:background="@color/grey13"
        android:id="@+id/ma_rg_navigator"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ma_rbt_navigator_make"
            style="@style/main_navigation"
            android:checked="true"
            android:drawableTop="@drawable/main_home_selector"
            android:text="@string/main_navigator_make" />

        <RadioButton
            android:id="@+id/ma_rbt_navigator_work"
            style="@style/main_navigation"
            android:drawableTop="@drawable/main_work_selector"
            android:text="@string/main_navigator_works" />

        <RadioButton
            android:id="@+id/ma_rbt_navigator_mine"
            style="@style/main_navigation"
            android:drawableTop="@drawable/main_mine_selector"
            android:text="@string/main_navigator_user" />

    </RadioGroup>

</LinearLayout>