<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--顶部title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_navigator_works"
            android:textColor="@color/grey32"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:visibility="invisible"
            android:textColor="@color/grey32"
            android:id="@+id/wf_tv_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/work_fragment_manage"
            android:textSize="13sp"></TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/wf_iv_no_record"
            android:background="@drawable/work_fragment_empty_record"
            android:layout_width="45dp"
            android:layout_height="45dp">

        </ImageView>

        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/work_fragment_nothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>




</RelativeLayout>