<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey7"
    android:orientation="vertical">
    <!--顶部title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/grey32"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/mf_tv_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/make_fragment_contact_us_shape"
            android:drawableLeft="@drawable/make_fragment_contact_us_2"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingRight="8dp"
            android:paddingBottom="3dp"
            android:drawablePadding="5dp"
            android:textColor="@color/white"
            android:text="@string/make_fragment_contact_us"
            android:textSize="11sp"></TextView>
    </RelativeLayout>
    <!-- 引导部分+tts和ocr入口-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!-- 引导部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
           android:visibility="invisible">


        </LinearLayout>
        <!-- tts和ocr入口-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/fnm_rl_tts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/make_fragment_tts_ocr_shape">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/make_fragment_tts"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/app_name"
                        android:textSize="13sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/make_fragment_export_mp3"
                        android:textSize="12sp"></TextView>

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/fnm_rl_ocr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/make_fragment_tts_ocr_shape">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/make_fragment_ocr_carmel"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/make_fragment_ocr_take_pic"
                        android:textSize="13sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/make_fragment_ocr_to_audio"
                        android:textSize="12sp"></TextView>

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
    <!-- tts可应用的场景-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fnm_rv_category_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">


    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>