<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/mf_ll_login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/red7">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@drawable/mine_fragment_avatar_default"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/mine_fragment_login"
            android:textSize="20sp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/mf_spend_bill_ll"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/mf_spend_bill_iv"
            android:background="@drawable/mine_fragment_bills"></ImageView>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_fragment_bill"
            android:textSize="15sp"
            android:gravity="center"></TextView>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:drawableRight="@drawable/icon_arrow_right"
            ></TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey_split_line"></View>
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/mf_help_ll"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/mf_help_iv"
            android:background="@drawable/mine_fragment_help_icon"></ImageView>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_fragment_help"
            android:textSize="15sp"
            android:gravity="center"></TextView>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:drawableRight="@drawable/icon_arrow_right"
            ></TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey_split_line"></View>
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/mf_settings_ll"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/mf_settings_iv"
            android:background="@drawable/mine_fragment_settings"></ImageView>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_fragment_setting"
            android:textSize="15sp"
            android:gravity="center"></TextView>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:drawableRight="@drawable/icon_arrow_right"
            ></TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey_split_line"></View>
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/mf_about_ll"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/mf_about_iv"
            android:background="@drawable/mine_fragment_about_icon"></ImageView>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_fragment_about_us"
            android:textSize="15sp"
            android:gravity="center"></TextView>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:drawableRight="@drawable/icon_arrow_right"
            ></TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey_split_line"></View>

</LinearLayout>