<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TtsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/red7">

        <Button
            android:id="@+id/tts_activity_btn_go_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back_title"></Button>

        <TextView
            android:id="@+id/tts_activity_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tts_activity_title"
            android:textColor="@color/grey32"
            android:textSize="15sp"></TextView>

    </LinearLayout>

    <EditText
        android:lineSpacingMultiplier="1.2"
        android:lineSpacingExtra="10dp"
        android:id="@+id/tts_activity_text_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="@string/tts_activity_default_text"
        android:textSize="16sp"></EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tts_activity_model_portrait_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/model_women_yun"></ImageView>

            <TextView
                android:id="@+id/tts_activity_model_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="云云"
                android:textSize="14sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tts_activity_bgm_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/tts_activity_bgm"></ImageView>

            <TextView
                android:id="@+id/tts_activity_bgm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="bgm1"
                android:textSize="14sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tts_activity_play_speed_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/tts_activity_speed"></ImageView>

            <TextView
                android:id="@+id/tts_activity_play_speed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/tts_activity_play_speed"
                android:textSize="14sp"></TextView>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/grey_dark"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tts_activity_tts_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/tts_activity_start_shape"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingRight="18dp"
            android:paddingLeft="18dp"
            android:text="@string/tts_activity_start"
            android:textColor="@color/red7"
            android:textSize="25sp"></TextView>

    </RelativeLayout>


</LinearLayout>